refact : 생성한 Request 클래스를 활용하여 RequestHandler 리팩토링
- Request 클래스를 활용하여 RequestHandler 의 run() 메소드를 리팩토링하였습니다.