@@ -11,13 +11,13 @@ import java.io.OutputStream;
 import java.net.Socket;
 
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Map;
 import model.User;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import util.HttpRequestUtils;
-import util.RequestLineUtil;
 
 public class RequestHandler extends Thread {
 
@@ -34,29 +34,18 @@ public class RequestHandler extends Thread {
             connection.getPort());
 
         try (InputStream in = connection.getInputStream(); OutputStream out = connection.getOutputStream()) {
-            BufferedReader br = new BufferedReader(new InputStreamReader(in, "UTF-8"));
+            BufferedReader br = new BufferedReader(new InputStreamReader(in));
+
+            Request request = new Request(br);
 
             // Request Message
-            String line = br.readLine();
-            String url = RequestLineUtil.from(line);
-            log.debug("Request: {}", line);
-            while (!(line = br.readLine()).equals("")) {
-                if (line == null) {
-                    return;
-                }
-                log.debug("Request: {}", line);
-            }
+            request.outputLog();
 
             // URL decode
-            url = URLDecoder.decode(url, "UTF-8");
+            String url = URLDecoder.decode(request.getURL(), StandardCharsets.UTF_8);
 
             // URL query check
-            if (url.contains("?")) {
-                url = url.split("\\?")[1];
-                // Model save
-                userSave(url);
-                url = "/index.html";
-            }
+            url = queryCheck(url);
 
             // Response Message
             byte[] body = Files.readAllBytes(new File("./webapp" + url).toPath());
@@ -92,5 +81,15 @@ public class RequestHandler extends Thread {
         Map<String, String> userInfo = HttpRequestUtils.parseQueryString(url);
         User user = new User(userInfo.get("userId"), userInfo.get("password"),userInfo.get("name"),userInfo.get("email"));
         DataBase.addUser(user);
+    }
+
+    private String queryCheck(String url){
+        if (url.contains("?")) {
+            url = url.split("\\?")[1];
+            // Model save
+            userSave(url);
+            url = "/index.html";
+        }
+        return url;
     }
 }
